Altinier: Accessibilité web (2012)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -732,6 +732,10 @@
     <h2>Web Accessibility Books</h2>
     <p>Most of these books are now out of date.</p>
     <ul>
+      <li lang="fr">Altinier, Armony:
+        <i class="booktitle">Accessibilité Web: Normes et bonnes pratiques pour des sites plus accessibles</i>. Paris: Eyrolles, 2012. (331 pages)
+        <abbr>ISBN</abbr> 978-2-212-12889-5.<!--www.editions-eyrolles.com-->
+      </li>
       <li>
         <a href="http://www.webaxe.org/web-accessibility-books/">Web Accessibility Books</a>,
         <i class="blog">Web Axe</i>, 26.11.2017.
