Horton: Access by Design (2006)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -730,12 +730,22 @@
     </ul>
 
     <h2>Web Accessibility Books</h2>
-    <p>Most of these books are now out of date.</p>
+    <p>The books below are listed by date of publication. Most of them are already out of date.</p>
     <ul>
+      <li>Horton, Sarah:
+        <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
+        <abbr>ISBN</abbr> 0-321-31140-X.
+      </li>
       <li lang="fr">Altinier, Armony:
         <i class="booktitle">Accessibilité Web: Normes et bonnes pratiques pour des sites plus accessibles</i>. Paris: Eyrolles, 2012. (331 pages)
         <abbr>ISBN</abbr> 978-2-212-12889-5.<!--www.editions-eyrolles.com-->
       </li>
+      <!--
+      <li>:
+        <i class="booktitle"></i>.
+        <abbr>ISBN</abbr> .
+      </li>
+      -->
       <li>
         <a href="http://www.webaxe.org/web-accessibility-books/">Web Accessibility Books</a>,
         <i class="blog">Web Axe</i>, 26.11.2017.
