Halsey: The Windows 10 Accessibility Handbook

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -167,6 +167,10 @@
         <i class="website">CNET</i>, 08.01.2010.
         Since this article dates from 2010, it is mostly of historical interest.
       </li>
+      <li>Halsey, Mike:
+        <i class="booktitle">The Windows 10 Accessibility Handbook: Supporting Windows Users with Special Visual, Auditory, Motor, and Cognitive Needs</i>. Apress, 2015.
+        <a href="https://www.apress.com/gp/book/9781484217320"><abbr>ISBN</abbr> 978-1-4842-1732-0</a>.
+      </li>
     </ul>
   </main>
 
