--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -114,6 +114,10 @@
         <a href="https://openinclusion.com/blog/5-accessibility-tests/">5 accessibility tests you can do in 5 minutes</a>,
         <i class="blog">Open Inclusion</i>, 02.03.2018.
       </li>
+      <li>Ruzek, Amelia:
+        <a href="https://code.likeagirl.io/10-small-changes-to-build-accessibility-into-your-website-aa6636994f6a">10 Small Changes To Build Accessibility Into Your Website</a>,
+        <i class="blog">Code Like a Girl</i>, 28.04.2018 (two-minute read).
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
