Waddell et al: Constructing Accessible Web Sites

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -736,6 +736,10 @@
     <h2>Web Accessibility Books</h2>
     <p>The books below are listed by date of publication. Most of them are already out of date.</p>
     <ul>
+      <li>Waddell, Cynthia, et al:
+        <i class="booktitle">Constructing Accessible Web Sites</i>. glasshaus, 2002. (415 pages)
+        <a href="https://www.apress.com/gp/book/9781590591482#otherversion=9781430211167"><abbr>ISBN</abbr> 978-1-59059-148-2</a>.
+      </li>
       <li>Horton, Sarah:
         <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
         <abbr>ISBN</abbr> 0-321-31140-X.
