--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -744,6 +744,10 @@
         <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
         <abbr>ISBN</abbr> 0-321-31140-X.
       </li>
+      <li>Rutter, Richard, et al:
+        <i class="booktitle">Web Accessibility: Web Standards and Regulatory Compliance</i>. Friends of Ed, 2006.
+        <a href="https://www.apress.com/gp/book/9781590596388"><abbr>ISBN</abbr> 978-1-59059-638-8</a>.
+      </li>
       <li lang="fr">Altinier, Armony:
         <i class="booktitle">Accessibilité Web: Normes et bonnes pratiques pour des sites plus accessibles</i>. Paris: Eyrolles, 2012. (331 pages)
         <abbr>ISBN</abbr> 978-2-212-12889-5.<!--www.editions-eyrolles.com-->
