O'Connor: Pro HTML5 Accessibility (2012)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -752,6 +752,10 @@
         <i class="booktitle">Accessibilité Web: Normes et bonnes pratiques pour des sites plus accessibles</i>. Paris: Eyrolles, 2012. (331 pages)
         <abbr>ISBN</abbr> 978-2-212-12889-5.<!--www.editions-eyrolles.com-->
       </li>
+      <li>O'Connor, Joshue:
+        <i class="booktitle">Pro <abbr>HTML</abbr>5 Accessibility: Building an Inclusive Web</i>. Apress, 2012. (365 pages)
+        <a href="https://www.apress.com/gp/book/9781430241942#otherversion=9781430241959"><abbr>ISBN</abbr> 978-1-4302-4194-2</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
