--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1017,6 +1017,11 @@
         <a href="https://www.symmetrymagazine.org/article/approaching-disability-like-a-scientist">Approaching disability like a scientist</a>,
         <i class="magazine">Symmetry</i>, 29.05.2018.
       </li>
+      <li>
+        <a href="http://project-ray.com/">Project Ray</a>:
+        <q cite="http://project-ray.com/about/">RAY’s solutions offer unique, new mobile experience for the blind, vision-impaired, and dyslectic individuals.
+        They can now use cell phones, smartphones, touch devices and connected digital tools, without any obstacles and barriers.</q>
+      </li>
       <!--
       <li>
         <a href=""></a>
@@ -1027,7 +1032,6 @@
   </main>
   <!--Accessibility books:
     * Jonathan Lazar: Universal Usability: Designing Computer Interfaces for Diverse User Populations. 2007.
-    * Sarah Horton: Access by Design: A Guide to Universal Usability for Web Designers. 2005.
     * Just Ask: Integrating Accessibility Throughout Design.
   -->
   <!-- Unsorted:
