S L Henry: Just Ask

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -744,6 +744,10 @@
         <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
         <abbr>ISBN</abbr> 0-321-31140-X.
       </li>
+      <li>Henry, Shawn Lawton:
+        <i class="booktitle">Just Ask: Integrating Accessibility Throughout Design</i>. Lulu.com, 2007. (200 pages)
+        <a href="http://www.uiaccess.com/accessucd/print.html"><abbr>ISBN</abbr> 978-1430319528</a>.
+      </li>
       <li>Rutter, Richard, et al:
         <i class="booktitle">Web Accessibility: Web Standards and Regulatory Compliance</i>. Friends of Ed, 2006.
         <a href="https://www.apress.com/gp/book/9781590596388"><abbr>ISBN</abbr> 978-1-59059-638-8</a>.
@@ -761,6 +765,9 @@
         <i class="booktitle"></i>.
         <abbr>ISBN</abbr> .
       </li>
+      -->
+      <!--Accessibility books:
+        * Jonathan Lazar: Universal Usability: Designing Computer Interfaces for Diverse User Populations. 2007.
       -->
       <li>
         <a href="http://www.webaxe.org/web-accessibility-books/">Web Accessibility Books</a>,
