Hellbusch & Probiesch: Barrierefreiheit verstehen und umsetzen

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -752,6 +752,11 @@
         <i class="booktitle">Web Accessibility: Web Standards and Regulatory Compliance</i>. Friends of Ed, 2006.
         <a href="https://www.apress.com/gp/book/9781590596388"><abbr>ISBN</abbr> 978-1-59059-638-8</a>.
       </li>
+      <li><span lang="de">Hellbusch, Jan Eric; Probiesch, Kerstin:
+        <i class="booktitle">Barrierefreiheit verstehen und umsetzen. Webstandards für ein zugängliches und nutzbares Internet</i>. dpunkt.verlag</span>, 2011. (812 pages)
+        <a href="https://www.dpunkt.de/buecher/10898/9783898645201-barrierefreiheit-verstehen-und-umsetzen.html"><abbr>ISBN</abbr> 978-3-89864-520-1</a>.
+        <br />See also <a href="https://www.barrierefreies-webdesign.de/dpunkt/">Hellbusch' webpage about the book</a>.
+      </li>
       <li lang="fr">Altinier, Armony:
         <i class="booktitle">Accessibilité Web: Normes et bonnes pratiques pour des sites plus accessibles</i>. Paris: Eyrolles, 2012. (331 pages)
         <abbr>ISBN</abbr> 978-2-212-12889-5.<!--www.editions-eyrolles.com-->
