Other Links and Resources

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -173,6 +173,12 @@
       </li>
     </ul>
 
+    <h3>Other Links and Resources</h3>
+    <ul>
+      <li>Sethfors, Hampus:
+        <a href="https://axesslab.com/hand-tremors/">Hand tremors and the giant-button-problem</a>,
+        <i class="website">Axess Lab</i>, 09.04.2018.
+    </ul>
 
     <h2>Specific Mobile Platforms</h2>
     <ul>
