Onsman: What's new in WCAG 2.1?

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -73,6 +73,13 @@
             they are creating.
           </li>
         </ul>
+        <br />Articles and blog posts:</li>
+        <ul>
+          <li>Onsman, Ricky:
+            <a href="http://intopia.digital/articles/whats-new-in-wcag-2-1/">What’s new in <abbr>WCAG</abbr> 2.1?</a>,
+            <i class="website">Intopia</i>, 15.06.2018.
+          </li>
+        </ul>
         <br />The following blog posts, articles and resources were written or
         created while <abbr>WCAG</abbr> was still under development:
         <ul>
