Joe Clark: Building Accessible Websites (2002)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -740,6 +740,10 @@
         <i class="booktitle">Constructing Accessible Web Sites</i>. glasshaus, 2002. (415 pages)
         <a href="https://www.apress.com/gp/book/9781590591482#otherversion=9781430211167"><abbr>ISBN</abbr> 978-1-59059-148-2</a>.
       </li>
+      <li>Clark, Joe:
+        <i class="booktitle">Building Accessible Websites</i>. Indianapolis, Indiana: New Riders, October 2002. (425 pages)
+        <abbr>ISBN</abbr> 0-7357-1150-X.<!--@@add website-->
+      </li>
       <li>Horton, Sarah:
         <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
         <abbr>ISBN</abbr> 0-321-31140-X.
