Coleman Institute: Inclusive Conference Presentation Guidelines

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -530,6 +530,10 @@
         See also the article <a href="http://www.agefriendlyeurope.org/news/new-who-handbook-age-friendly-environments">New WHO handbook on age-friendly environments</a>
         by the Covenant on Demographic Change (16.01.2018).
       </li>
+      <li>
+        <a href="https://www.colemaninstitute.org/inclusive-conference-presentation-guidelines/">Inclusive Conference Presentation Guidelines</a>,
+        <i class="website">Coleman Institute for Cognitive Disabilities, University of Colorado</i> (no date).
+      </li>
     </ul>
 
     <h2>Accessibility in Education</h2>
@@ -1030,10 +1034,6 @@
     </ul>
 
   </main>
-  <!--Accessibility books:
-    * Jonathan Lazar: Universal Usability: Designing Computer Interfaces for Diverse User Populations. 2007.
-    * Just Ask: Integrating Accessibility Throughout Design.
-  -->
   <!-- Unsorted:
     * Noun Project: https://thenounproject.com/about/ 
     * Engineering4Society Conference 2016: Programme (+ link to Proceedings and YouTube videos): http://www.engineering4society.org/ / http://www.esat.kuleuven.be/stadius/engineering4society/programme.php
