Born Accessible Publishing

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -533,6 +533,10 @@
         content that is being withdrawn, Cyndy Rowland writes:
         <q>Berkeley, America’s <a href="http://admissions.berkeley.edu/rankings">number one</a> public university, a pioneer in social justice, civil rights, and disability rights, has little excuse for these careless decisions.</q>
       </li>
+      <li>
+        <a href="http://diagramcenter.org/born-accessible-publishing.html">Born Accessible Publishing</a>,
+        <i class="website">DIAGRAM Center</i> (no date).
+      </li>
     </ul>
 
   </main>
