ICADD SGML (XML Coverpages)

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -537,6 +537,11 @@
         <a href="http://diagramcenter.org/born-accessible-publishing.html">Born Accessible Publishing</a>,
         <i class="website">DIAGRAM Center</i> (no date).
       </li>
+      <li>
+        <a href="http://xml.coverpages.org/ICADDpur.html"><abbr>ICADD</abbr> <abbr>SGML</abbr>: International Committee for Accessible Document Design</a>.
+        (Copy of a document from 1992; only of historical interest now. See also the
+        <a href="http://itd.athenpro.org/volume2/number2/icadd.html">Information Technology and Disabilities Journal, Volume II, Number 2, May 1995</a>.)
+      </li>
     </ul>
 
   </main>
