--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -748,13 +748,17 @@
         <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
         <abbr>ISBN</abbr> 0-321-31140-X.
       </li>
+      <li>Rutter, Richard, et al:
+        <i class="booktitle">Web Accessibility: Web Standards and Regulatory Compliance</i>. Friends of Ed, 2006.
+        <a href="https://www.apress.com/gp/book/9781590596388"><abbr>ISBN</abbr> 978-1-59059-638-8</a>.
+      </li>
       <li>Henry, Shawn Lawton:
         <i class="booktitle">Just Ask: Integrating Accessibility Throughout Design</i>. Lulu.com, 2007. (200 pages)
         <a href="http://www.uiaccess.com/accessucd/print.html"><abbr>ISBN</abbr> 978-1430319528</a>.
       </li>
-      <li>Rutter, Richard, et al:
-        <i class="booktitle">Web Accessibility: Web Standards and Regulatory Compliance</i>. Friends of Ed, 2006.
-        <a href="https://www.apress.com/gp/book/9781590596388"><abbr>ISBN</abbr> 978-1-59059-638-8</a>.
+      <li>Craven, Jenny (editor):
+        <i class="booktitle">Web Accessibility: Practical Advice for the Library and Information Professional</i>. London: Facet Publishing, 2008. (168 pages)
+        <abbr>ISBN</abbr> 978-1-85604-625-1.
       </li>
       <li><span lang="de">Hellbusch, Jan Eric; Probiesch, Kerstin:
         <i class="booktitle">Barrierefreiheit verstehen und umsetzen. Webstandards für ein zugängliches und nutzbares Internet</i>. dpunkt.verlag</span>, 2011. (812 pages)
