--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -381,14 +381,26 @@
     </ul>
     <!--
     <ul>
-      <li><a href=""></a>
+      <li>
+        <a href=""></a>
       </li>
     </ul>
     -->
-    <!-- 
+    <!--
       * Project Naptha: http://projectnaptha.com/ : OCR in the browser, using Tesseract
       * Tesseract: Open Source OCR Engine: https://github.com/tesseract-ocr/tesseract (Licence: Apache 2.0; plus other liberal licence for Leptonica).
     -->
+    <h3>Transcribing Audio</h3>
+    <ul>
+      <li>
+        <a href="http://otranscribe.com/">oTranscribe</a>:
+        <q>A free web app to take the pain out of transcribing recorded interviews.</q>
+      </li>
+      <li>Myers, Erin:
+        <a href="https://www.temi.com/blog/tools-to-record-edit-transcribe-and-share-podcasts/">10 Essential Tools to Record, Edit, Transcribe and Share Podcasts</a>,
+        <i class="blog">Temi.com blog</i>, 25.09.2017. (This blog post was not written with accessibility in mind but mentions some useful tools.)
+      </li>
+    </ul>
 
 
     <h2 id="readability">Content Readability</h2>
