Lewis: 5 Free Transcription Software ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -400,6 +400,10 @@
         <a href="https://www.temi.com/blog/tools-to-record-edit-transcribe-and-share-podcasts/">10 Essential Tools to Record, Edit, Transcribe and Share Podcasts</a>,
         <i class="blog">Temi.com blog</i>, 25.09.2017. (This blog post was not written with accessibility in mind but mentions some useful tools.)
       </li>
+      <li>Lewis, John:
+        <a href="https://blog.transcriptionstar.com/5-free-transcription-softwares/">5 Free Transcription Software for Triumphant Transcripts</a>,
+        <i class="blog">Transcriptionstar blog</i>, 13.07.2017.
+      </li>
     </ul>
 
 
