--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1031,6 +1031,10 @@
         <q cite="http://project-ray.com/about/">RAY’s solutions offer unique, new mobile experience for the blind, vision-impaired, and dyslectic individuals.
         They can now use cell phones, smartphones, touch devices and connected digital tools, without any obstacles and barriers.</q>
       </li>
+      <li>
+        <a href="https://www.taubenschlag.de/" hreflang="de" lang="de">Taubenschlag</a>:
+        a German website for people who are deaf or hard of hearing.
+      </li>
       <!--
       <li>
         <a href=""></a>
