Kengadaran: Inclusive: A Microsoft design toolkit

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -299,6 +299,10 @@
         <i class="website">Villes internet</i></span>, 06.06.2018.
         <!--@@PDF-->
       </li>
+      <li>Kengadaran, Siddarth:
+        <a href="https://siddarth.design/inclusive-a-microsoft-design-toolkit-1f86018b2691">Inclusive: A Microsoft design toolkit</a>,
+        <i class="blog">Siddarth Kengadaran on Medium</i>, 20.08.2017.
+      </li>
     </ul>
 
     <h2>Braille</h2>
