Avila: Does WCAG 2.1 Replace 2.0?

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -79,6 +79,10 @@
             <a href="http://intopia.digital/articles/whats-new-in-wcag-2-1/">What’s new in <abbr>WCAG</abbr> 2.1?</a>,
             <i class="website">Intopia</i>, 15.06.2018.
           </li>
+          <li>Avila, Jonathan:
+            <a href="https://www.levelaccess.com/wcag-2-1-replace-2-0-organizations-adopt-2-1/">Does <abbr>WCAG</abbr> 2.1 Replace 2.0? When Should You Adopt <abbr>WCAG</abbr> 2.1?</a>,
+            <i class="website">Level Access</i>, 27.06.2018.
+          </li>
         </ul>
         <br />The following blog posts, articles and resources were written or
         created while <abbr>WCAG</abbr> was still under development:
