Microsoft: Inclusive Design; Designing Accessible Websites

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -303,6 +303,14 @@
         <a href="https://siddarth.design/inclusive-a-microsoft-design-toolkit-1f86018b2691">Inclusive: A Microsoft design toolkit</a>,
         <i class="blog">Siddarth Kengadaran on Medium</i>, 20.08.2017.
       </li>
+      <li>
+        <a href="https://www.microsoft.com/design/inclusive/">Inclusive Design</a>,
+        <i class="website">Microsoft</i> (no date).
+      </li>
+      <li>
+        <a href="https://docs.microsoft.com/en-us/microsoft-edge/accessibility/design">Designing Accessible Websites</a>,
+        <i class="website">Microsoft</i>, 06.02.2017.
+      </li>
     </ul>
 
     <h2>Braille</h2>
