--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -133,7 +133,7 @@
     </ul>
 
 
-    <h2>Dyslexia</h2>
+    <h2 id="dyslexia">Dyslexia</h2>
     <h3>Fonts for Dyslexia</h3>
     <p>The following fonts were specially developed for readers with dyslexia.
     </p>
