--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -105,7 +105,7 @@
       </li>
     </ul>
 
-    <h2>Dyslexia</h2>
+    <h2 id="dyslexia">Dyslexia</h2>
     <ul>
       <li>
         <a href="http://www.calmlywriter.com/">Calmly Writer</a>:
