Texthelp: Read&Write

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -109,8 +109,15 @@
     <ul>
       <li>
         <a href="http://www.calmlywriter.com/">Calmly Writer</a>:
-        online tool.
-        <!-- not primarily for people with dyslexia -->
+        online tool (strictly speaking not primarily for people with dyslexia).
+      </li>
+      <li>
+        <a href="https://www.texthelp.com/en-gb/products/read-write/">Read &amp; Write</a>:
+        commercial product for Windows, Mac <abbr>OS</abbr> and a few other platforms by the British company Texthelp.
+        To get an idea of what the software can do, see also the
+        <a href="https://www.youtube.com/channel/UC50ySjJFHy9ZJltP6S0AlHg">company's YouTube channel</a>,
+        <abbr>e.g.</abbr> the videos about
+        <a href="https://www.youtube.com/playlist?list=PLvSZbmGbKpCTZxmR7X1CESsu3jpWcJTy-">Using Read&amp;Write at University</a>.
       </li>
       <li>Taylor, Julia: 
         <a href="https://www.jisc.ac.uk/blog/how-technology-can-help-dyslexic-learners-help-themselves-05-nov-2015">How technology can help dyslexic learners help themselves</a>,
