--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -119,6 +119,9 @@
         <abbr>e.g.</abbr> the videos about
         <a href="https://www.youtube.com/playlist?list=PLvSZbmGbKpCTZxmR7X1CESsu3jpWcJTy-">Using Read&amp;Write at University</a>.
       </li>
+      <li>
+        <a href="https://marketing.kurzweiledu.com/acton/media/11777/drive-meaningful-progress-with-the-latest-release-of-kurzweil-3000">Kurzweil 3000</a>.
+      </li>
       <li>Taylor, Julia: 
         <a href="https://www.jisc.ac.uk/blog/how-technology-can-help-dyslexic-learners-help-themselves-05-nov-2015">How technology can help dyslexic learners help themselves</a>,
         <i class="blog"><abbr>JISC</abbr> blog</i>, 05.11.2015. 
