--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -299,7 +299,7 @@
           </li>
         </ul>
       </li>
-      <li class="UOS">Accessible Audiovisual Media (Video and Audio Barriers)
+      <li class="UOS">Accessible Audiovisual Media: Video and Audio Barriers
         (<a href="https://drive.google.com/drive/folders/0B876rHn1ttsld082SGZPcmp1eHM">Google Drive folder</a>): 
         <ul>
           <li id="fl-step-1-11">
@@ -2552,8 +2552,8 @@
           <a href="https://drive.google.com/open?id=0BytF5o2naVX9ZnpJTkRQQmNsRkE">Common Problems</a> (Microsoft Word document, copyright <span lang="de">Peter Heumader</span>, <abbr>JKU</abbr>).
         </li>
         <li>
-          <a href="https://drive.google.com/drive/folders/0BytF5o2naVX9VUdRYURMSlo1WW8">Captions and Subtitles for Videos</a> (Microsoft Word document, copyright <span lang="de">Peter Heumader</span>, <abbr>JKU</abbr>).
-          <!-- folder: https://drive.google.com/open?id=0BytF5o2naVX9VUdRYURMSlo1WW8 -->
+          <a href="https://docs.google.com/document/d/1fXaPzhX-1RXQngGyFUm55_85j-ExPeTQJx8EUMgG2wI/">Captions and Subtitles for Videos</a> (Microsoft Word document, copyright <span lang="de">Peter Heumader</span>, <abbr>JKU</abbr>).
+          <!--folder: https://drive.google.com/open?id=0BytF5o2naVX9VUdRYURMSlo1WW8 -->
         </li>
         <li>
           <a href="https://drive.google.com/drive/folders/0BytF5o2naVX9NlRRMGJCeFBSVms">Audio Descriptions for Videos</a> (Microsoft Word document, copyright <span lang="de">Peter Heumader</span>, <abbr>JKU</abbr>).
