--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -781,6 +781,14 @@
       </li>
     </ul>
 
+    <h2>Accessibility Metadata</h2>
+    <ul>
+      <li>
+        <a href="http://dublincore.org/groups/access/"><abbr title="Dublin Core Metadata Initiative">DCMI</abbr> Accessibility Community</a>.
+        <!--licence: CC-BY 3.0-->
+      </li>
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>Sydell, Laura:
