Nevile: Why is accessibility metadata proving difficult?

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -787,6 +787,10 @@
         <a href="http://dublincore.org/groups/access/"><abbr title="Dublin Core Metadata Initiative">DCMI</abbr> Accessibility Community</a>.
         <!--licence: CC-BY 3.0-->
       </li>
+      <li>Nevile, Liddy:
+        <a href="http://www.dublincore.org/groups/access/poster/">Why is Accessibility Metadata Proving Difficult?</a>,
+        <i class="website">Dublin Core Metadata Initiative</i> (no date).
+      </li>
     </ul>
 
     <h2>Other Links</h2>
