Accessibilit Metadata Project

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -791,6 +791,13 @@
         <a href="http://www.dublincore.org/groups/access/poster/">Why is Accessibility Metadata Proving Difficult?</a>,
         <i class="website">Dublin Core Metadata Initiative</i> (no date).
       </li>
+      <li>
+        <a href="http://www.a11ymetadata.org/">Accessibility Metadata Project</a>:
+        <q>Making Accessible Content Discoverable: A Benetech Led Proposal for Accessibility Metadata in Schema.org</q>.
+        <!--@@check final report-->
+        <br />See also
+        <a href="https://wiki.benetech.org/display/a11ymetadata/Project+Overview">Accessibility Metadata Project in the Benetech wiki</a>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
