--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -760,6 +760,10 @@
         <i class="booktitle">Access by Design: A Guide to Universal Usability for Web Designers</i>. Berkeley, California: New Riders, 2006 [actually 2005]. (264 pages)
         <abbr>ISBN</abbr> 0-321-31140-X.
       </li>
+      <li>Duckett, Jon:
+        <i class="booktitle">Accessible <abbr>XHTML</abbr> and <abbr>CSS</abbr> Web Sites: Problem - Design - Solution</i>. Indianapolis, Indiana: Wiley, 2006 (actually 2005). (458 pages)
+        <abbr>ISBN</abbr> 0-7645-8306-9.
+      </li>
       <li>Rutter, Richard, et al:
         <i class="booktitle">Web Accessibility: Web Standards and Regulatory Compliance</i>. Friends of Ed, 2006.
         <a href="https://www.apress.com/gp/book/9781590596388"><abbr>ISBN</abbr> 978-1-59059-638-8</a>.
