Accessibility Inspector - Firefox Developer Tools

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -440,6 +440,10 @@
 
     <h2>Articles about Automated Accessibility Evaluation</h2>
     <ul>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Tools/Accessibility_inspector">Accessibility inspector - Firefox Developer Tools</a>,
+        <i class="website"><abbr>MDN</abbr></i>, last updated 20.06.2018 (accessed 02.07.2018).
+      </li>
       <li>Cashin, Caitlin:
         <a href="https://medium.com/@caitlin.cashin/the-engine-driving-web-accessibility-standardization-4515d87250ca">The Engine Driving Web Accessibility Standardization</a>,
         <i class="blog">Caitlin Cash (on Medium)</i>, 10.01.2018.
