Authors 'Constructing Accessible Websitese'

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -748,7 +748,7 @@
     <h2>Web Accessibility Books</h2>
     <p>The books below are listed by date of publication. Most of them are already out of date.</p>
     <ul>
-      <li>Waddell, Cynthia, et al:
+      <li>Thatcher, Jim; Bohman, Paul; Burks, Michael; Henry, Shawn Lawton; Regan, Bob; Swierenga, Sarah; Urban, Mark D.; Waddell, Cynthia:
         <i class="booktitle">Constructing Accessible Web Sites</i>. glasshaus, 2002. (415 pages)
         <a href="https://www.apress.com/gp/book/9781590591482#otherversion=9781430211167"><abbr>ISBN</abbr> 978-1-59059-148-2</a>.
       </li>
@@ -761,7 +761,7 @@
         <abbr>ISBN</abbr> 0-321-31140-X.
       </li>
       <li>Duckett, Jon:
-        <i class="booktitle">Accessible <abbr>XHTML</abbr> and <abbr>CSS</abbr> Web Sites: Problem - Design - Solution</i>. Indianapolis, Indiana: Wiley, 2006 (actually 2005). (458 pages)
+        <i class="booktitle">Accessible <abbr>XHTML</abbr> and <abbr>CSS</abbr> Web Sites: Problem - Design - Solution</i>. Indianapolis, Indiana: Wiley, 2006 [actually 2005]. (458 pages)
         <abbr>ISBN</abbr> 0-7645-8306-9.
       </li>
       <li>Rutter, Richard, et al:
