May: The Same, But Different

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -127,6 +127,10 @@
         <a href="https://medium.com/@gradualclearing/math-is-hard-people-with-disabilities-matter-a393812d2927">Math is hard. People with disabilities matter</a>,
         <i class="blog">Medium</i>, 09.02.2015 (four-minute read).
       </li>
+      <li>May, Matt:
+        <a href="https://theblog.adobe.com/different-breaking-accessibility-universality-inclusion-design/">The Same, But Different: Breaking Down Accessibility, Universality, and Inclusion in Design</a>,
+        <i class="blog">Adobe Blog</i>, 02.04.2018.
+      </li>
       <li>Schwab, Katharine:
         <a href="https://www.fastcodesign.com/90160000/how-to-design-for-everyone-in-3-steps">How To Design For Everyone, In 3 Steps</a>,
         <i class="website">Co.Design</i>, 09.02.2018 (seven-minute read).
@@ -1005,6 +1009,7 @@
         <a href="https://blog.prototypr.io/going-colorblind-an-experiment-in-empathy-and-accessibility-98b7003737ca">Going Colorblind: An Experiment in Empathy and Accessibility</a>,
         <i class="blog">Prototypr on Medium</i>, 02.04.2018 (seven-minute read).
       </li>
+      <!--@@section testing/evaluation-->
       <li>Brajnik, Giorgio:
         <a href="https://users.dimi.uniud.it/~giorgio.brajnik/projects/bw/">An accessibility evaluation method based on Barrier Walkthrough</a>.
         (Licence: <abbr>CC-BY-SA</abbr>.)
