--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -131,6 +131,10 @@
         <a href="https://theblog.adobe.com/different-breaking-accessibility-universality-inclusion-design/">The Same, But Different: Breaking Down Accessibility, Universality, and Inclusion in Design</a>,
         <i class="blog">Adobe Blog</i>, 02.04.2018.
       </li>
+      <li>May, Matt:
+        <a href="https://theblog.adobe.com/inclusion-doesnt-stop-accessibility/">Inclusion Doesn’t Stop at Accessibility</a>,
+        <i class="blog">Adobe Blog</i>, 02.05.2018.
+      </li>
       <li>Schwab, Katharine:
         <a href="https://www.fastcodesign.com/90160000/how-to-design-for-everyone-in-3-steps">How To Design For Everyone, In 3 Steps</a>,
         <i class="website">Co.Design</i>, 09.02.2018 (seven-minute read).
