Baker: The Science of Color Contrast

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -475,6 +475,10 @@
         <a href="https://www.dta.gov.au/blog/colour-and-contrast/">Colour and contrast — the 2 essential ingredients of accessible design</a>,
         <i class="blog">Australian Government – Digital Transformation Agency blog</i>, 19.01.2018.
       </li>
+      <li>Baker, Justin:
+        <a href="https://medium.muz.li/the-science-of-color-contrast-an-expert-designers-guide-33e84c41d156">The Science of Color Contrast — An Expert Designer’s Guide</a>,
+        <i class="blog">Muzli (Medium)</i>, 24.01.2018 (four-minute read).
+      </li>
     </ul>
 
     <h2>Web Applications and <abbr>WAI</abbr>-<abbr>ARIA</abbr></h2>
