Lacerda: How to Create an Accessible Autocomplete Component with Vue.js

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -611,6 +611,10 @@
         This article answers the question,
         <q>If I'm building a single page web app, what should happen to <code>focus</code> when the user clicks some navigation?</q>
       </li>
+      <li>Lacerda, Filipa:
+        <a href="https://alligator.io/vuejs/vue-a11y-autocomplete/">How to Create an Accessible Autocomplete Component with Vue.js</a>,
+        <i class="website">Alligator.io</i>, 28.02.2018.
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
