IBM: Vue A11y Calendar

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -615,6 +615,10 @@
         <a href="https://alligator.io/vuejs/vue-a11y-autocomplete/">How to Create an Accessible Autocomplete Component with Vue.js</a>,
         <i class="website">Alligator.io</i>, 28.02.2018.
       </li>
+      <li><abbr>IBM</abbr>:
+        <a href="https://github.com/ibm/vue-a11y-calendar">Vue A11Y Calendar</a>
+        (open-source component available on GitHub).
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
