Whitehouse: Building an accessible Modal component with React Portals: Part 1

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -619,6 +619,10 @@
         <a href="https://github.com/ibm/vue-a11y-calendar">Vue A11Y Calendar</a>
         (open-source component available on GitHub).
       </li>
+      <li>Whitehouse, Luke:
+        <a href="https://assortment.io/posts/accessible-modal-component-react-portals-part-1">Building an accessible Modal component with React Portals: Part 1</a>,
+        <i class="website">Assortment</i>, 31.05.2018.
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
