Whitehouse: Building an accessible Modal component with React Portals: Part 2

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -623,6 +623,10 @@
         <a href="https://assortment.io/posts/accessible-modal-component-react-portals-part-1">Building an accessible Modal component with React Portals: Part 1</a>,
         <i class="website">Assortment</i>, 31.05.2018.
       </li>
+      <li>Whitehouse, Luke:
+        <a href="https://assortment.io/posts/accessible-modal-component-react-portals-part-2">Building an accessible Modal component with React Portals: Part 2</a>,
+        <i class="website">Assortment</i>, 07.06.2018.
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
