--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -238,6 +238,10 @@
         <a href="https://www.abilitynet.org.uk/blog/five-golden-rules-compliant-alt-text">Five golden rules for compliant alt text</a>,
         <i class="blog">AbilityNet blog</i>, 14.02.2014.
       </li>
+      <li>Wahlbin, Kathy:
+        <a href="http://www.interactiveaccessibility.com/blog/making-images-visible-blind-users">Making Images Visible to Blind Users</a>,
+        <i class="blog">Interactive Accessibility</i>, 10.10.2012.
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
