Avila: CSS Background Images and Accesssibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -242,6 +242,10 @@
         <a href="http://www.interactiveaccessibility.com/blog/making-images-visible-blind-users">Making Images Visible to Blind Users</a>,
         <i class="blog">Interactive Accessibility</i>, 10.10.2012.
       </li>
+      <li>Avila, Jonathan:
+        <a href="https://www.levelaccess.com/css-background-images-and-accessibility/"><abbr>CSS</abbr> Background Images and Accessibility</a>,
+        <i class="blog">Level Access</i>, 14.06.2011.
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
