WAI: Stories of Web Users

--- a/personas.html
+++ b/personas.html
@@ -174,6 +174,13 @@
     <p>Projects sometimes develop stories that are similar to personas but that are not based on formal user research.
     </p>
     <ul>
+      <li>Web Accessibility Initiative (<abbr>WAI</abbr>) at <abbr>W3C</abbr>:
+        <a href="https://www.w3.org/WAI/people-use-web/user-stories/">Stories of Web Users</a>,
+        last updated 15 May 2017.
+        <br />German translation:
+        <a href="https://www.ag.bka.gv.at/at.gv.bka.wiki-bka/index.php/Barrierefrei:WAI_Nutzer-Stories" hreflang="de" lang="de"><abbr>WAI</abbr> Nutzer-Stories</a>
+        (last updated 03.07.2015).
+      </li>
       <li>National Disability Authority:
         <a href="https://www.youtube.com/watch?v=A88E4DH2asQ">Meet The Normals - Adventures in Universal Design</a>
         (YouTube, 7 minutes):
