Sutton: Start Building Accessible Web App...

--- a/courses.html
+++ b/courses.html
@@ -103,10 +103,14 @@
 
     <h3>Web Accessibility</h3>
     <ul>
+      <li>Sutton, Marcy:
+        <a href="https://egghead.io/courses/start-building-accessible-web-applications-today">Start Building Accessible Web Applications Today</a>,
+        <i class="website">egghead.io</i>.
+      </li>
       <li>
         <a href="https://de.ryerson.ca/wa/advanced/">Advanced Web Accessibility Strategies and Techniques</a>
         is a four-week course developed by the The Chang School, Ryerson University.
-        It requires five hours of study per week and start in September 2018.
+        It requires five hours of study per week and starts in September 2018.
       </li>
       <li><a href="http://centreforinclusivedesign.org/professional-certificate-web-accessibility/">Professional Certificate in Web Accessibility</a>
         is a six-week course by the Centre for Inclusive Design (Australia). The course ran from 26 March to 4 May 2018
