Deque University: Screen Reader Keyboard Shortcuts

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -171,6 +171,10 @@
         <i class="booktitle">The Windows 10 Accessibility Handbook: Supporting Windows Users with Special Visual, Auditory, Motor, and Cognitive Needs</i>. Apress, 2015.
         <a href="https://www.apress.com/gp/book/9781484217320"><abbr>ISBN</abbr> 978-1-4842-1732-0</a>.
       </li>
+      <li>
+        <a href="https://dequeuniversity.com/screenreaders/">Screen Reader Keyboard Shortcuts</a>,
+        <i class="website">Deque University</i>.
+      </li>
     </ul>
   </main>
 
