Steve Jacobs: Electronic Curb-Cut Effect

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -319,6 +319,10 @@
         <a href="https://www.microsoft.com/design/inclusive/">Inclusive Design</a>,
         <i class="website">Microsoft</i> (no date).
       </li>
+      <li>Jacobs, Steve:
+        <a href="http://www.icdri.org/technology/ecceff.htm">The Electronic Curb-Cut Effect</a>,
+        <i class="website"><abbr title="International Center for Disability Resources on the Internet">ICDRI</abbr></i>, 1998.
+      </li>
       <li>
         <a href="https://docs.microsoft.com/en-us/microsoft-edge/accessibility/design">Designing Accessible Websites</a>,
         <i class="website">Microsoft</i>, 06.02.2017.
