Landmarks - browser extension

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -130,6 +130,14 @@
         is an extension for Chrome developed by the <a href="https://fluidproject.org/">Fluid Project</a>.
         It allows people to customize websites by tweaking text size, line spacing, contrast and other features. 
       </li>
+      <li>
+        <a href="http://matatk.agrip.org.uk/landmarks/">Landmarks</a>:
+        browser extension for Firefox, Chroma and Opera.
+        See also the article by Graham Armfield:
+        <a href="https://openinclusion.com/blog/browser-extensions-deliver-landmark-navigation-keyboard-users/">Browser Extensions can Deliver Landmark Navigation for All Keyboard Users</a>
+        (08.05.2018).
+        <!--Source code repo on GitHub, maintained by Matthew Tylee Atkinson: https://github.com/matatk/landmarks -->
+      </li>
     </ul>
 
 
