--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -81,6 +81,11 @@
         <a class="booktitle" href="https://www.braams.nl/kennisverdieping/boeken/dyslexie-een-complex-taalprobleem" hreflang="nl" lang="nl">Dyslexie, een complex taalprobleem</a>
         (4th edition, 2002).
       </li>
+      <!--Tools and fonts:-->
+      <li>The
+        <a href="https://www.atbar.org/"><abbr>AT</abbr>Bar</a>
+        contains a number of options that can make text more readable for people with dyslexia. 
+      </li>
     </ul>
 
 
