--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -91,6 +91,10 @@
         is a extension for Chrome and Chromium. The developer writes:
         <q>nOverlay started life as a tool that I wrote for my dyslexic wife whilst she was studying at University. The tool worked so well for her that she urged me to develop it further and release it to the world - nOverlay is the result of her relentless requests and she assures me that she now simply cannot browse the web without it!</q>
       </li>
+      <li>
+        <a href="https://www.texthelp.com/en-gb/">Texthelp</a>
+        offers commercial products for Microsoft Windows and Mac <abbr>OS</abbr> X.
+      </li>
     </ul>
 
 
