ClaroView for PC

--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -95,6 +95,10 @@
         <a href="https://www.texthelp.com/en-gb/">Texthelp</a>
         offers commercial products for Microsoft Windows and Mac <abbr>OS</abbr> X.
       </li>
+      <li>
+        <a href="https://www.clarosoftware.com/claroview-for-pc">ClaroView for <abbr>PC</abbr></a>
+        is a product for Microsoft Windows (Windows 7 or more recent).
+      </li>
     </ul>
 
 
