MyStudyBar (CALL Scotland)

--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -99,6 +99,11 @@
         <a href="https://www.clarosoftware.com/claroview-for-pc">ClaroView for <abbr>PC</abbr></a>
         is a product for Microsoft Windows (Windows 7 or more recent).
       </li>
+      <li>
+        <a href="http://www.callscotland.org.uk/mystudybar/">MyStudyBar</a>
+        is <q>suite of portable Windows freeware applications assembled into one package to support learners with literacy difficulties</q>.
+        It is a free download provided by CALL Scotland.
+      </li>
     </ul>
 
 
