Minor edit: Site nav

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a>.
       </li>
-      <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines and Standards</a>.
       </li>
       <li><a href="oers/moocap-oers.html">Open educational resources (<abbr>OERs</abbr>) for accessibility courses (<abbr>MOOCAP</abbr>)</a>
       </li>
@@ -167,8 +167,6 @@
       * Stefan Rössler: "Why Designers Should Do Usability Tests", Userbrain Blog, 11.02.2015: https://userbrain.net/blog/why-designers-should-do-usability-tests 
       * Stefan Rössler: "Why You Should Watch First Time Users", Userbrain Blog, 02.01.2015: https://userbrain.net/blog/why-first-time-users 
       * Stefan Rössler: "Design The User Not The Experience", Userbrain Blog, 17.01.2015: https://userbrain.net/blog/design-the-user 
-      * Jamie Knight: "Cognitive Accessibility 101 - Part 1: What is Cognitive Accessibility", 2015 (?): http://jkg3.com/Journal/cognitive-accessibility-101-part-1-what-is-cognitive-accessibility 
-      * Jamie Knight: "Cognitive Accessibility 101 - Part 2: How it effects me & the tools I use", 2015: http://jkg3.com/Journal/cognitive-accessibility-101-part-2-how-it-effects-me-the-tools-i-use 
       * Robert James Gabriel: "Research into Web Accessibility for Dyslexics and Dyslexia-focused fonts such as OpenDyslexia", 23 Feb. 2017: https://medium.com/@RobertJGabriel/research-into-web-accessibility-for-dyslexics-and-dyslexia-focused-fonts-such-as-opendyslexia-6ff27a10773b 
       * Hidde de Vries: "Making conference videos more accessible", hiddedevries.nl, 21.01.2016: https://hiddedevries.nl/en/blog/2016-01-21-making-conference-videos-more-accessible 
       * Caitlin Geier: "5 Things UX and Visual Designers Can Do to Get Started with Accessibility", The Deque Blog, 10.05.2016: https://www.deque.com/blog/5-ux-visual-designers-started-accessibility/ 
