Einfach für Alle: Einführung ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -61,6 +61,10 @@
         <a href="https://uxplanet.org/a-primer-to-web-accessibility-for-designers-2c548448c612">A Primer to Web Accessibility for Designers</a>,
         <i class="blog"><abbr>UX</abbr> Planet on Medium</i>, 10.03.2018.
       </li>
+      <li lang="de">
+        <a href="https://www.einfach-fuer-alle.de/artikel/einfuehrung-barrierefreiheit/" hreflang="de">Einführung in Barrierefreiheit</a>,
+        <i class="website">Einfach für Alle</i> (<span lang="en">no date</span>).
+      </li>
       <li>Conti, Genevieve:
         <a href="https://zapier.com/blog/accessible-web-content/">The Writer's Guide to Making Accessible Web Content</a>,
         <i class="blog">Zapier</i>, 17.05.2016.
