GfI: Web Accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -65,6 +65,10 @@
         <a href="https://www.einfach-fuer-alle.de/artikel/einfuehrung-barrierefreiheit/" hreflang="de">Einführung in Barrierefreiheit</a>,
         <i class="website">Einfach für Alle</i> (<span lang="en">no date</span>).
       </li>
+      <li lang="de">
+        <a href="https://gi.de/informatiklexikon/web-accessibility-barrierefreiheit/" hreflang="de">Web Accessibility (Barrierefreiheit)</a>,
+        <i class="website">Gesellschaft für Informatik</i>, 14.10.2013.
+      </li>
       <li>Conti, Genevieve:
         <a href="https://zapier.com/blog/accessible-web-content/">The Writer's Guide to Making Accessible Web Content</a>,
         <i class="blog">Zapier</i>, 17.05.2016.
